@@ -319,6 +319,7 @@ In addition, some extra non-BLAS routines are also supported by CLBlast, classif
 | IxAMIN     | ✔ | ✔ | ✔ | ✔ | ✔ |
 | IxMAX      | ✔ | ✔ | ✔ | ✔ | ✔ |
 | IxMIN      | ✔ | ✔ | ✔ | ✔ | ✔ |
+| xHAD       | ✔ | ✔ | ✔ | ✔ | ✔ | (Hadamard product)
 | xOMATCOPY  | ✔ | ✔ | ✔ | ✔ | ✔ |
 | xIM2COL    | ✔ | ✔ | ✔ | ✔ | ✔ |
 
